--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="background">#FAFAFA</color>
+    <color name="divider_color">#E0E0E0</color>
 </resources> 
