--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="black">#000000</color>
     <color name="background">#FAFAFA</color>
     <color name="divider_color">#E0E0E0</color>
+    <color name="table_header_background">#F5F5F5</color>
+    <color name="table_header_text">#333333</color>
 </resources> 
